--- a/pages/blog/refactoring-to-vue-3.mdx
+++ b/pages/blog/refactoring-to-vue-3.mdx
@@ -55,7 +55,8 @@ For example, if we have a Button that retrieves data from the server and updates
   alt="Visual representation of a data stream (described above)"
   style={{
     backgroundColor: "#ffffff",
-    maxWidth: "40rem",
+    width: "40rem",
+    maxWidth: "100%",
   }}
 />
 
@@ -74,7 +75,8 @@ In this example, we call **stateful logic** to the click event handler, the data
   alt="The stateful logic would include: the click stream, the retrieval of state from the server on click, and the logic that updates state when data is retrieved from the server"
   style={{
     backgroundColor: "#ffffff",
-    maxWidth: "40rem",
+    width: "40rem",
+    maxWidth: "100%",
   }}
 />
 
