--- a/pages/blog/generated-color-palettes.mdx
+++ b/pages/blog/generated-color-palettes.mdx
@@ -17,10 +17,10 @@ import {
   HueSlider,
 } from "../../components/blog/generated-color-palettes/ColorSliders";
 import {
-  Column,
   Row,
+  Col,
   Spacer,
-} from "../../components/blog/generated-color-palettes/ColumnSection";
+} from "../../components/blog/generated-color-palettes/RowSection";
 import {
   Headline,
   SmallText,
@@ -37,24 +37,24 @@ import {
 
 Most screens and monitors use the sRGB color spectrum, which basically means they can represent a limited subset of the colors we can see in real life.
 
-<Column tag="figure" style={{  fontSize: "0.8em", margin: "0" }}>
+<Row tag="figure" style={{  fontSize: "0.8em", margin: "0" }}>
 
-<Row
+<Col
   tag="img"
   src="/blog/generated-color-palettes/CIExy1931_sRGB.svg"
   alt="Visual representation of the sRGB color spectrum inside the 'shoe-shaped' visual spectrum"
   style={{ backgroundColor: "white", width: "20em" }}
 />
 
-<Row tag="figcaption" style={{  width: '20em', textAlign: 'left' }}>
+<Col tag="figcaption" style={{  width: '20em', textAlign: 'left' }}>
 
 **sRGB color spectrum** (black triangle), as compared to the color range visible by the human eye ("shoe shape").
 
 [Via Wikimedia Commons](https://commons.wikimedia.org/wiki/File:CIExy1931_sRGB.svg), [CC BY-SA 3.0](http://creativecommons.org/licenses/by-sa/3.0)
 
-</Row>
+</Col>
 
-</Column>
+</Row>
 
 When you see an **hexadecimal color** (like `#FF0000`) or a **CSS color value** (like `rgb(100,0,0)`), you are seeing the **representation of a color inside the sRGB spectrum**, the color scheme used by the browser. These are instructions that the browser sends to your screen to render a color inside the specified color range.
 
@@ -111,7 +111,7 @@ We can also use JSX to express this color palette, with a component like this:
 ```jsx
 export const ColorPalette = () => {
   return (
-    <div style={{ display: "grid", gridTemplateColumns: "repeat(11, 1fr)" }}>
+    <div style={{ display: "grid", gridTemplateRows: "repeat(11, 1fr)" }}>
       {[0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100].map((step) => (
         <div
           key={step}
@@ -134,11 +134,11 @@ So far so good, right?
 
 But because we don't want to only use grays, let's try to use the same technique for different colors.
 
-<Column>
-  <Row style={{ maxWidth: "14rem" }}>
+<Row>
+  <Col style={{ maxWidth: "14rem" }}>
     <SaturationSlider />
-  </Row>
-  <Row style={{ minWidth: "20rem" }}>
+  </Col>
+  <Col style={{ minWidth: "20rem" }}>
 
 If we increase the color's **saturation**, (the **s** in **hsl()**) we can see how color starts to appear. In this case, since our hue is 0, we will see the color <strong style={{ color: "red" }}>red</strong>.
 
@@ -148,21 +148,21 @@ Try it yourself: move the saturation slider until you see the box fill up in red
 
 </SmallText>
 
-  </Row>
-</Column>
+  </Col>
+</Row>
 
 <Spacer />
 
-<Column>
-  <Row style={{ maxWidth: "14rem" }}>
+<Row>
+  <Col style={{ maxWidth: "14rem" }}>
     <HueSlider />
-  </Row>
-  <Row style={{ minWidth: "20rem" }}>
+  </Col>
+  <Col style={{ minWidth: "20rem" }}>
 
 We can also change the **hue** (the **h** in **hsl()**), using values from 0 to 360, to get colors from all the sRGB spectrum.
 
-  </Row>
-</Column>
+  </Col>
+</Row>
 
 Given all we've discovered so far, we could try to create palettes using the arguments of the `hsl()` function.
 
@@ -190,46 +190,46 @@ The result we would get surely must be a harmonic color palette, right?
 
 Well, as we can see, not so much. We have inconsistencies all around!
 
-<Column>
-  <Row style={{ minWidth: "20rem" }}>
+<Row>
+  <Col style={{ minWidth: "20rem" }}>
 
 For example, even at the same luminosity of 50%, blue text is perfectly readable at a white background, while yellow text is only readable with a black background.
 
 _According to the HSL function, these colors have the same luminosity. But do these colors really have the same luminosity?_
 
-</Row>
-<Row style={{ maxWidth: "14rem", alignSelf: "flex-end" }}>
+</Col>
+<Col style={{ maxWidth: "14rem", alignSelf: "flex-end" }}>
   <LegibilityBrokenSample/>
+</Col>
 </Row>
-</Column>
 
 <Spacer />
 
-<Column>
-<Row style={{ minWidth: "20rem" }}>
+<Row>
+<Col style={{ minWidth: "20rem" }}>
 
 Other colors have steps that are almost impossible to distinguish.
 
 For example, in the image we have two colors at 50% and 60% luminosity. While for purple we can clearly perceive two colors, the two steps of yellow are almost impossible to tell apart.
 
-</Row>
-<Row style={{ maxWidth: "14rem", alignSelf: "flex-end" }}>
+</Col>
+<Col style={{ maxWidth: "14rem", alignSelf: "flex-end" }}>
   <ContrastBrokenSample/>
+</Col>
 </Row>
-</Column>
 
 <Spacer />
 
-<Column>
-<Row style={{ minWidth: "20rem" }}>
+<Row>
+<Col style={{ minWidth: "20rem" }}>
 
 To make things worse, the value for hue is also misleading. The orange/yellow colors in the image have the same hue difference as the blue colors, yet the blue colors look exactly the same, while the oranges look very distinct.
 
-</Row>
-<Row style={{ maxWidth: "14rem", alignSelf: "flex-end" }}>
+</Col>
+<Col style={{ maxWidth: "14rem", alignSelf: "flex-end" }}>
   <HueBrokenSample/>
+</Col>
 </Row>
-</Column>
 
 And let's not even look into start changing saturation, because that value tends to be misleading as well!
 
@@ -255,19 +255,19 @@ But, if we can't use `hsl()`, `lighten()` or `darken()`, **what can we do?**
 
 To understand this statement better, let's look again at the sRGB spectrum inside the "shoe-shaped" figure (this "shoe shape" is actually a representation of the [CIE XYZ color space](https://en.wikipedia.org/wiki/CIE_1931_color_space), a color space that **takes into account psychological perception**).
 
-<Column as="figure">
-  <Row
+<Row as="figure">
+  <Col
     tag="img"
     src="/blog/generated-color-palettes/CIExy1931_sRGB_with_markers.svg"
     style={{ backgroundColor: "white", width: "20em" }}
   />
-  <Row tag="figcaption" style={{  width: '20em', textAlign: 'left' }}>
+  <Col tag="figcaption" style={{  width: '20em', textAlign: 'left' }}>
 
 In this figure, line **`a`** represents the distance of teal at 50% and 100% luminosity.
 Line **`b`** represents the distance of blue at 50% and 100% luminosity.
 
+</Col>
 </Row>
-</Column>
 
 According to the HSL function, the distance variation is the same. But, **are this distances really the same?**
 
